--- a/index.html
+++ b/index.html
@@ -12,93 +12,154 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
   </head>
   <body>
-    <div class="container pt-5">
-      <img class="w-25 h-auto pb-5 mx-auto d-block" src="imgs/SVG/Logo.svg" alt="Deerwater Dental Wellness" />
+    <div class="container-fluid pt-5">
+      <img class="w-25 h-auto pb-5 d-block mx-auto" src="imgs/SVG/Logo.svg" alt="Deerwater Dental Wellness" />
       <h1 class="text-center">Phases of Treatment</h1>
       <br/>
       <!-- Pyramid Content -->
-      <div class="pyramid-container pb-5 accordion" id="accordionExample">
+      <div class="pyramid-container pb-5 accordion d-flex flex-column" id="accordionExample">
         <div class="pyramid" >
           <div class="pyramid-row">
             <div class="level two">
-              <span class="s1"><strong>Phase 5:</strong><br/>Maintenance<br/>Optimal Function</span>
-            </div>
-          </div>
-          <div class="pyramid-row">
-            <div class="level three">
-              <span class="other-row"><strong>Phase 4:</strong><br/> Crown Level</span>
-            </div>
-          </div>
-          <div class="pyramid-row">
-            <div class="level four">
-              <span class="other-row"><strong>Phase 3:</strong><br/> Root Level</span>
-            </div>
-          </div>
-          <div class="pyramid-row">
-            <div class="level five">
-              <button class="btn other-row text-white" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                <strong>Phase 2:</strong><br/> Foundation and Occlusion
+              <button class="btn btn-block s1 text-white" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
+                <strong>Phase 5:</strong><br/>Maintenance<br/>Optimal Function
               </button>
             </div>
-            <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionExample">
-              <div class="card-body">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
+              <div class="card-body d-flex flex-column">
+                <p>Maintain Phase 1 to Phase 4 and Pathology Screening</p>
+              </div>
+              <button class="btn btn-info show-more d-inline" type="button" data-toggle="collapse" data-target="#collapse5x" aria-expanded="true" aria-controls="collapse5x">Show More</button>
+              <button class="btn btn-info show-more d-inline" type="button" data-toggle="modal" data-target="#modal25">Doctor's Note</button>
+              <br/><br/>
+              <div id="collapse5x" class="collapse card-body">
+                <p><strong>Regular check-up to evaluate and maintain:</strong><br/>Optimum dental and oral health (Preventative, Restorative Dentistry)<br/>Good Myofunctional habits, Occlusal Stability, Airway &amp; Sleep (Orthopedic &amp; Orthodontics [Retainers], Occlusion/TMD Dentistry)<br/>Optimum Smile (Cosmetic Dentistry)</p>
               </div>
             </div>
           </div>
           <div class="pyramid-row">
+            <div class="level three">
+              <button class="btn btn-block other-row text-white " type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+                <strong>Phase 4:</strong><br/> Crown Level
+              </button>
+            </div>
+            <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+              <div class="card-body d-flex flex-column">
+                <p><strong>Prosthodontics/Prothetic Dentistry:</strong><br/>Dentures, Bridge, and Crown</p>
+                <p><strong>Orthodontic Dentistry:</strong><br/>Brace</p>
+                <p><strong>Cosmetic Dentistry:</strong><br/>Cosmetic Alignment</p>
+              </div>
+              <button class="btn btn-info show-more d-inline" type="button" data-toggle="modal" data-target="#modal34">Doctor's Note</button>
+              <br/><br/>
+            </div>
+          </div>
+          <div class="pyramid-row">
+            <div class="level four">
+              <button class="btn btn-block other-row text-white " type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+                <strong>Phase 3:</strong><br/> Root Level
+              </button>
+            </div>
+            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+              <div class="card-body d-flex flex-column">
+                <p><strong>Implant Dentistry:</strong><br/>Restoration of missing roots/teeth</p>
+                <p><strong>Regenerative Dentistry:</strong><br/>Bone graft</p>
+                <p><strong>Othopedic/Orthodontics Dentistry:</strong><br/>Myofunctional Therapy<br/>Brace - Foundational Alignment</p>
+                <p><strong>TMS Treatment:</strong> <br/>Temporo-Mandibular &amp; Sleep Disorders<br/>Craniofacial Pain &amp; Sleep Dentistry</p>
+              </div>
+              <button class="btn btn-info show-more d-inline" type="button" data-toggle="modal" data-target="#modal34">Doctor's Note</button>
+              <br/><br/>
+            </div>
+          </div>
+          <div class="pyramid-row">
+            <div class="level five">
+              <button class="btn btn-block other-row text-white" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                <strong>Phase 2:</strong><br/> Foundation and Occlusion
+              </button>
+            </div>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+              <div class="card-body">
+                <p>Restoration of damages gum and bone<br/>Force factor - Finding excessive force accelerating the wear and tear of the teeth<br/>TMS screening/exam</p>
+              </div>
+              <button class="btn btn-info show-more d-inline" type="button" data-toggle="collapse" data-target="#collapse2x" aria-expanded="true" aria-controls="collapse2x">Show More</button>
+              <button class="btn btn-info show-more d-inline" type="button" data-toggle="modal" data-target="#modal25">Doctor's Note</button>
+              <br/><br/>
+              <div id="collapse2x" class="collapse card-body">
+                <p><strong>Foundation of existing teeth:</strong><br/>Treat bone/gum around teeth</p>
+                <p><strong>Occlusion:</strong><br/>Relationship between upper and lower teeth and jaw</p>
+              </div>
+            </div>
+
+          </div>
+          <div class="pyramid-row">
             <div class="level six">
-              <button class="btn other-row text-white" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              <button class="btn btn-block other-row text-white" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                 <strong>Phase 1:</strong><br/>General Dental Care - Bacterial Control/Eradicating Infections
               </button>
             </div>
-            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-              <div class="card-body">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+              <div class="card-body d-flex flex-column">
+                <p>Cleaning teeth, Restoration of decayed teeth, Extraction, Root canal, etc.</p>
               </div>
             </div>
           </div>
         </div>
       </div>
       <!-- End of Pyramid -->
-
-      <!-- Bootstrap Things -->
-      <div class="" id="">
-
-        <div class="card">
-          <div class="card-header" id="headingTwo">
-            <h2 class="mb-0">
-              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Collapsible Group Item #2
-              </button>
-            </h2>
-          </div>
-          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-            <div class="card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+      
+      <!-- Footer -->
+      <footer class="p-3">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-12 text-center">
+              <p>&copy; 2019 Deerwater. All Rights Reserved.</p>
             </div>
           </div>
         </div>
-        <div class="card">
-          <div class="card-header" id="headingThree">
-            <h2 class="mb-0">
-              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Collapsible Group Item #3
-              </button>
-            </h2>
-          </div>
-          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-            <div class="card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+      </footer>
+      <!-- End of Footer -->
+      
+      <!-- Modals -->
+      <div class="modal fade" id="modal34" tabindex="-1" role="dialog" aria-labelledby="title34" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="title34">Phase 3 &amp; 4:</h5>
+            </div>
+            <div class="modal-body">
+              <p>Comprehensive handling of Phase 1 and 2 clinical information (Orthodontic and TM orthotic treatment can be in both Phases).</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-color" data-dismiss="modal">Close</button>
             </div>
           </div>
         </div>
       </div>
-      <!-- End of Bootstrap Things -->
+
+      <div class="modal fade" id="modal25" tabindex="-1" role="dialog" aria-labelledby="title25" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="title25">Phase 2 &amp; 5:</h5>
+            </div>
+            <div class="modal-body">
+              <p>Decision made by patient after Doctor's assessment:</p>
+              <ul>
+                <li><strong>Supportive:</strong> Minimizing impact of untreated underlining causes/issues</li>
+                <li><strong>Definitive:</strong> Treating/attempt to address the underlining causes/issues</li>
+              </ul>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-color" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End of Modals -->
 
     </div>
 
-
+    <!-- Local JS -->
+    <script src="js/index.js"></script>
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
