--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   </head>
   <body>
     <div class="container-fluid pt-5">
-      <img class="w-25 h-auto pb-5 d-block mx-auto" src="imgs/SVG/Logo.svg" alt="Deerwater Dental Wellness" />
+      <a href="index.html">
+        <img class="w-25 h-auto pb-5 d-block mx-auto" src="imgs/SVG/Logo.svg" alt="Deerwater Dental Wellness" />
+      </a>
       <h1 class="text-center">Phases of Treatment</h1>
       <br/>
       <!-- Pyramid Content -->
@@ -105,7 +107,7 @@
         </div>
       </div>
       <!-- End of Pyramid -->
-      
+
       <!-- Footer -->
       <footer class="p-3">
         <div class="container-fluid">
@@ -117,7 +119,7 @@
         </div>
       </footer>
       <!-- End of Footer -->
-      
+
       <!-- Modals -->
       <div class="modal fade" id="modal34" tabindex="-1" role="dialog" aria-labelledby="title34" aria-hidden="true">
         <div class="modal-dialog modal-dialog-scrollable" role="document">
