--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
               <div class="card-body d-flex flex-column">
                 <p>Maintain Phase 1 to Phase 4 and Pathology Screening</p>
               </div>
-              <button class="btn btn-info show-more d-inline" type="button" data-toggle="collapse" data-target="#collapse5x" aria-expanded="true" aria-controls="collapse5x">Show More</button>
-              <button class="btn btn-info show-more d-inline" type="button" data-toggle="modal" data-target="#modal25">Doctor's Note</button>
+              <button class="btn  btn-color show-more d-inline" type="button" data-toggle="collapse" data-target="#collapse5x" aria-expanded="true" aria-controls="collapse5x">Show More</button>
+              <button class="btn btn-color show-more d-inline" type="button" data-toggle="modal" data-target="#modal25">Doctor's Note</button>
               <br/><br/>
               <div id="collapse5x" class="collapse card-body">
                 <p><strong>Regular check-up to evaluate and maintain:</strong><br/>Optimum dental and oral health (Preventative, Restorative Dentistry)<br/>Good Myofunctional habits, Occlusal Stability, Airway &amp; Sleep (Orthopedic &amp; Orthodontics [Retainers], Occlusion/TMD Dentistry)<br/>Optimum Smile (Cosmetic Dentistry)</p>
@@ -51,7 +51,7 @@
                 <p><strong>Orthodontic Dentistry:</strong><br/>Brace</p>
                 <p><strong>Cosmetic Dentistry:</strong><br/>Cosmetic Alignment</p>
               </div>
-              <button class="btn btn-info show-more d-inline" type="button" data-toggle="modal" data-target="#modal34">Doctor's Note</button>
+              <button class="btn  btn-color show-more d-inline" type="button" data-toggle="modal" data-target="#modal34">Doctor's Note</button>
               <br/><br/>
             </div>
           </div>
@@ -68,7 +68,7 @@
                 <p><strong>Othopedic/Orthodontics Dentistry:</strong><br/>Myofunctional Therapy<br/>Brace - Foundational Alignment</p>
                 <p><strong>TMS Treatment:</strong> <br/>Temporo-Mandibular &amp; Sleep Disorders<br/>Craniofacial Pain &amp; Sleep Dentistry</p>
               </div>
-              <button class="btn btn-info show-more d-inline" type="button" data-toggle="modal" data-target="#modal34">Doctor's Note</button>
+              <button class="btn  btn-color show-more d-inline" type="button" data-toggle="modal" data-target="#modal34">Doctor's Note</button>
               <br/><br/>
             </div>
           </div>
@@ -82,8 +82,8 @@
               <div class="card-body">
                 <p>Restoration of damages gum and bone<br/>Force factor - Finding excessive force accelerating the wear and tear of the teeth<br/>TMS screening/exam</p>
               </div>
-              <button class="btn btn-info show-more d-inline" type="button" data-toggle="collapse" data-target="#collapse2x" aria-expanded="true" aria-controls="collapse2x">Show More</button>
-              <button class="btn btn-info show-more d-inline" type="button" data-toggle="modal" data-target="#modal25">Doctor's Note</button>
+              <button class="btn btn-color show-more d-inline" type="button" data-toggle="collapse" data-target="#collapse2x" aria-expanded="true" aria-controls="collapse2x">Show More</button>
+              <button class="btn btn-color show-more d-inline" type="button" data-toggle="modal" data-target="#modal25">Doctor's Note</button>
               <br/><br/>
               <div id="collapse2x" class="collapse card-body">
                 <p><strong>Foundation of existing teeth:</strong><br/>Treat bone/gum around teeth</p>
@@ -128,7 +128,7 @@
               <h5 class="modal-title" id="title34">Phase 3 &amp; 4:</h5>
             </div>
             <div class="modal-body">
-              <p>Comprehensive handling of Phase 1 and 2 clinical information (Orthodontic and TM orthotic treatment can be in both Phases).</p>
+              <p>Comprehensive handling of Phase 1 and 2 clinical information (Orthodontic and TM orthotic treatment can be in both phases).</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-color" data-dismiss="modal">Close</button>
