--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <h1 class="text-center">Phases of Treatment</h1>
       <br/>
       <!-- Pyramid Content -->
-      <div class="pyramid-container pb-5 accordion d-flex flex-column" id="accordionExample">
+      <div class="pyramid-container container-fluid pb-5 accordion d-block" id="accordionExample">
         <div class="pyramid" >
-          <div class="pyramid-row">
+          <div class="pyramid-row container-fluid">
             <div class="level two">
               <button class="btn btn-block s1 text-white" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
                 <strong>Phase 5:</strong><br/>Maintenance<br/>Optimal Function
@@ -39,7 +39,7 @@
               </div>
             </div>
           </div>
-          <div class="pyramid-row">
+          <div class="pyramid-row container-fluid">
             <div class="level three">
               <button class="btn btn-block other-row text-white " type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
                 <strong>Phase 4:</strong><br/> Crown Level
@@ -55,7 +55,7 @@
               <br/><br/>
             </div>
           </div>
-          <div class="pyramid-row">
+          <div class="pyramid-row container-fluid">
             <div class="level four">
               <button class="btn btn-block other-row text-white " type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
                 <strong>Phase 3:</strong><br/> Root Level
@@ -72,7 +72,7 @@
               <br/><br/>
             </div>
           </div>
-          <div class="pyramid-row">
+          <div class="pyramid-row container-fluid">
             <div class="level five">
               <button class="btn btn-block other-row text-white" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                 <strong>Phase 2:</strong><br/> Foundation and Occlusion
@@ -91,7 +91,7 @@
               </div>
             </div>
           </div>
-          <div class="pyramid-row">
+          <div class="pyramid-row container-fluid">
             <div class="level six">
               <button class="btn btn-block other-row text-white" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                 <strong>Phase 1:</strong><br/>General Dental Care - Bacterial Control/Eradicating Infections
@@ -120,7 +120,7 @@
       <!-- End of Footer -->
 
       <!-- Modals -->
-      <div class="modal fade" id="modal34" tabindex="-1" role="dialog" aria-labelledby="title34" aria-hidden="true">
+      <div class="modal fade container-fluid" id="modal34" tabindex="-1" role="dialog" aria-labelledby="title34" aria-hidden="true">
         <div class="modal-dialog modal-dialog-scrollable" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -136,7 +136,7 @@
         </div>
       </div>
 
-      <div class="modal fade" id="modal25" tabindex="-1" role="dialog" aria-labelledby="title25" aria-hidden="true">
+      <div class="modal fade container-fluid" id="modal25" tabindex="-1" role="dialog" aria-labelledby="title25" aria-hidden="true">
         <div class="modal-dialog modal-dialog-scrollable" role="document">
           <div class="modal-content">
             <div class="modal-header">
