--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <p><strong>Orthodontic Dentistry:</strong><br/>Brace</p>
                 <p><strong>Cosmetic Dentistry:</strong><br/>Cosmetic Alignment</p>
               </div>
-              <button class="btn btn-color show-more d-inline" type="button" data-toggle="modal" data-target="#modal34">Doctor's Note</button>
+              <button class="btn btn-color show-more d-inline" type="button" data-toggle="modal" data-target="#modal34">Read More</button>
               <br/><br/>
             </div>
           </div>
@@ -68,7 +68,7 @@
                 <p><strong>Othopedic/Orthodontics Dentistry:</strong><br/>Myofunctional Therapy<br/>Brace - Foundational Alignment</p>
                 <p><strong>TMS Treatment:</strong> <br/>Temporo-Mandibular &amp; Sleep Disorders<br/>Craniofacial Pain &amp; Sleep Dentistry</p>
               </div>
-              <button class="btn  btn-color show-more d-inline" type="button" data-toggle="modal" data-target="#modal34">Doctor's Note</button>
+              <button class="btn  btn-color show-more d-inline" type="button" data-toggle="modal" data-target="#modal34">Read More</button>
               <br/><br/>
             </div>
           </div>
@@ -82,7 +82,7 @@
               <div class="card-body">
                 <p>Restoration of damages gum and bone<br/>Force factor - Finding excessive force accelerating the wear and tear of the teeth<br/>TMS screening/exam</p>
               </div>
-              <button class="btn btn-color show-more d-inline" type="button" data-toggle="collapse" data-target="#collapse2x" aria-expanded="true" aria-controls="collapse2x">Show More</button>
+              <button class="btn btn-color show-more d-inline" id="read" onclick="readMore()" type="button" data-toggle="collapse" data-target="#collapse2x" aria-expanded="true" aria-controls="collapse2x">Show More</button>
               <button class="btn btn-color show-more d-inline" type="button" data-toggle="modal" data-target="#modal25">Doctor's Note</button>
               <br/><br/>
               <div id="collapse2x" class="collapse card-body">
