--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <div class="card-body d-flex flex-column">
                 <p>Maintain Phase 1 to Phase 4 and Pathology Screening</p>
               </div>
-              <button class="btn btn-color show-more d-inline" type="button" data-toggle="collapse" data-target="#collapse5x" aria-expanded="true" aria-controls="collapse5x">Show More</button>
+              <button class="btn btn-color show-more d-inline" id="read5" type="button" data-toggle="collapse" data-target="#collapse5x" aria-expanded="true" aria-controls="collapse5x">Read More</button>
               <button class="btn btn-color show-more d-inline" type="button" data-toggle="modal" data-target="#modal25">Doctor's Note</button>
               <br/><br/>
               <div id="collapse5x" class="collapse card-body">
@@ -68,7 +68,7 @@
                 <p><strong>Othopedic/Orthodontics Dentistry:</strong><br/>Myofunctional Therapy<br/>Brace - Foundational Alignment</p>
                 <p><strong>TMS Treatment:</strong> <br/>Temporo-Mandibular &amp; Sleep Disorders<br/>Craniofacial Pain &amp; Sleep Dentistry</p>
               </div>
-              <button class="btn  btn-color show-more d-inline" type="button" data-toggle="modal" data-target="#modal34">Read More</button>
+              <button class="btn btn-color show-more d-inline" type="button" data-toggle="modal" data-target="#modal34">Read More</button>
               <br/><br/>
             </div>
           </div>
@@ -82,7 +82,7 @@
               <div class="card-body">
                 <p>Restoration of damages gum and bone<br/>Force factor - Finding excessive force accelerating the wear and tear of the teeth<br/>TMS screening/exam</p>
               </div>
-              <button class="btn btn-color show-more d-inline" id="read" onclick="readMore()" type="button" data-toggle="collapse" data-target="#collapse2x" aria-expanded="true" aria-controls="collapse2x">Show More</button>
+              <button class="btn btn-color show-more d-inline" id="read1" type="button" data-toggle="collapse" data-target="#collapse2x" aria-expanded="true" aria-controls="collapse2x">Read More</button>
               <button class="btn btn-color show-more d-inline" type="button" data-toggle="modal" data-target="#modal25">Doctor's Note</button>
               <br/><br/>
               <div id="collapse2x" class="collapse card-body">
@@ -140,7 +140,7 @@
         <div class="modal-dialog modal-dialog-scrollable" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="title25">Phase 2 &amp; 5:</h5>
+              <h5 class="modal-title" id="title25">Phase 2 to 5:</h5>
             </div>
             <div class="modal-body">
               <p>Decision made by patient after Doctor's assessment:</p>
