--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Deerwater Dental Wellness - Phases of Treatment</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <!-- Local CSS -->
     <link href="css/style.css" rel="stylesheet" type="text/css"  />
     <!-- Bootstrap CSS -->
