--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p>Maintain Phase 1 to Phase 4 and Pathology Screening</p>
               </div>
               <button class="btn btn-color show-more d-inline" id="read5" type="button" data-toggle="collapse" data-target="#collapse5x" aria-expanded="true" aria-controls="collapse5x">Read More</button>
-              <button class="btn btn-color show-more d-inline" type="button" data-toggle="modal" data-target="#modal25">Doctor's Note</button>
+              <button class="btn btn-color show-more d-inline" type="button" data-toggle="modal" data-target="#modal25">Treatment's Goal</button>
               <br/><br/>
               <div id="collapse5x" class="collapse card-body">
                 <p><strong>Regular check-up to evaluate and maintain:</strong><br/>Optimum dental and oral health (Preventative, Restorative Dentistry)<br/>Good Myofunctional habits, Occlusal Stability, Airway &amp; Sleep (Orthopedic &amp; Orthodontics [Retainers], Occlusion/TMD Dentistry)<br/>Optimum Smile (Cosmetic Dentistry)</p>
@@ -85,7 +85,7 @@
                 <p>Restoration of damages gum and bone<br/>Force factor - Finding excessive force accelerating the wear and tear of the teeth<br/>TMS screening/exam</p>
               </div>
               <button class="btn btn-color show-more d-inline" id="read1" type="button" data-toggle="collapse" data-target="#collapse2x" aria-expanded="true" aria-controls="collapse2x">Read More</button>
-              <button class="btn btn-color show-more d-inline" type="button" data-toggle="modal" data-target="#modal25">Doctor's Note</button>
+              <button class="btn btn-color show-more d-inline" type="button" data-toggle="modal" data-target="#modal25">Treatment's Goal</button>
               <br/><br/>
               <div id="collapse2x" class="collapse card-body">
                 <p><strong>Foundation of existing teeth:</strong><br/>Treat bone/gum around teeth</p>
