--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="index.html">
         <img class="w-25 h-auto pb-5 d-block mx-auto" src="imgs/SVG/Logo.svg" alt="Deerwater Dental Wellness" />
       </a>
-      <h1 class="text-center">Phases of Treatment</h1>
+      <h1 class="text-center"> Our Phases of Treatment</h1>
       <br/>
       <!-- Pyramid Content -->
       <div class="pyramid-container container-fluid pb-5 accordion d-block" id="accordionExample">
